# superscraper

./: .gitignore  README.md  pyproject.toml  requirements.txt  setup.py
scraper/: main.py  requirements.txt
scraper/json/: base.json  base2.json
scraper/scraper/: custom_pipelines.py  debug.py  items.py  loader.py  main.py  main.sh  pipelines.py  proxies-basic.json  proxies.json  settings.py  settings.sh
scraper/scraper/json/: base.json  base2.json  output.json  selenium.json  spiders.json
scraper/scraper/json_templates/: base.json  selenium.json
scraper/scraper/json_templates/secret/: const.py  secret.json
scraper/scraper/spiders/: base_spider.py  selenium_spider.py
scraper/scraper/util/: constants.py  dict_util.py  file_util.py  func_util.py
