[project]
name = "superscraper"
version = "1.0.0"
description = "CLI web scraping tool and Python library that can be used to extract any data from the web."
authors = [
    {name = "Terminus07"}
]
license = {text = "MIT License"}
readme = "README.md"
requires-python = ">=3.6"

[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"